# 42-CPP

./: CMakeLists.txt
CPP-00/ex00/: megaphone.cpp
CPP-00/ex01/: Makefile  phonebook  phonebook.cpp
CPP-00/ex01/includes/: Contact.hpp  Phonebook.hpp
CPP-00/ex01/srcs/: Contact.cpp  PhoneBook.cpp  command.cpp  contact.cpp  display.cpp  main.cpp  phonebook.cpp
CPP-00/ex02/: Account.cpp  Account.hpp  Makefile
CPP-01/ex00/: Makefile
CPP-01/ex00/includes/: Zombie.hpp
CPP-01/ex00/srcs/: Zombie.cpp  main.cpp  newZombie.cpp  randomChump.cpp
CPP-01/ex01/: Makefile
CPP-01/ex01/includes/: Zombie.hpp
CPP-01/ex01/srcs/: main.cpp  (+2 more)
CPP-01/ex02/: Makefile  main.cpp
CPP-01/ex03/: Makefile
CPP-01/ex04/: .gitignore  Makefile  infile.replace  main.cpp  outfile  sed_is_for_losers
CPP-01/ex05/: .gitignore  Makefile
CPP-01/ex06/: Makefile
CPP-02/ex00/: Makefile
CPP-02/ex01/: Makefile  nowWeTalk
CPP-02/ex02/: Makefile
CPP-02/ex03/: BSP  Makefile
CPP-03/ex00/: Aaaaand...OPEN!  Makefile
CPP-03/ex01/: Makefile
CPP-03/ex02/: Makefile
CPP-03/ex03/: Makefile  Nowit’sweird!
CPP-04/ex00/: Makefile  main.cpp
CPP-04/ex01/: Makefile
CPP-05/ex00/: Makefile
CPP-05/ex01/: Makefile
CPP-05/ex02/: Makefile
CPP-06/ex02/: Makefile
CPP-08/ex01/: Makefile
CPP-08/ex02/: Makefile
CPP-09/ex00/: Makefile  bitcoin.txt
CPP-09/ex01/: Makefile
CPP-09/ex02/: Makefile
CPP_05/ex00/: Makefile
CPP_05/ex03/: Makefile
CPP_06/ex00/: Makefile
CPP_06/ex01/: Makefile
cpp_05/ex01/: Makefile
cpp_08/ex00/: Makefile
ex00/: Makefile  Megaphone.hpp  megaphone.cpp
(+160 files in other folders)
